add update database

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -20,5 +20,11 @@
 		</li>
 		<% } %>
 	</ul>
+	<div>
+	<h2>Anavel Gato Attacks!!!</h2>
+		<p>Replace first character's quote with a quote from Anavel Gato</p>
+		<button id="update-button">Replace the quote</button>
+	</div>
+	<script src="/main.js"></script>
 </body>
 </html>
