add delete from database

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -22,9 +22,15 @@
 	</ul>
 	<div>
 	<h2>Anavel Gato Attacks!!!</h2>
-		<p>Replace first character's quote with a quote from Anavel Gato</p>
-		<button id="update-button">Replace the quote</button>
+		<p>Replace Amuro Ray's quote with a quote from Anavel Gato, or add Anavel Gato's quote</p>
+		<button id="update-button">Replace or add a quote</button>
 	</div>
+	<div>
+	<h2>Ensign Kou Uraki launches!</h2>
+		<p>Delete one of Anavel Gato's quotes if one is present</p>
+	 	<button id="delete-button">Delete Anavel Gato's quote</button>
+	</div>
+	<div id="message"></div>
 	<script src="/main.js"></script>
 </body>
 </html>
